--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/alarm_textview"
+                        android:id="@+id/alarm2_textview"
                         android:layout_width="220dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
@@ -101,7 +101,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/alarm_textview"
+                        android:id="@+id/alarm3_textview"
                         android:layout_width="220dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
@@ -157,14 +157,3 @@
 
 
 </RelativeLayout>
-    <Button
-        android:id="@+id/addAlarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Alarm"
-        android:background="@android:color/white"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
